/* འབྲེལ་གཏུགས */

--- a/ཐང་སྟོང་རྒྱལ་པོ.mw
+++ b/ཐང་སྟོང་རྒྱལ་པོ.mw
@@ -1,9 +1,8 @@
 [[ཐང་སྟོང་རྒྱལ་པོ| རྗེ་གྲུབ་ཐོབ་ཆེན་པོ་ལྕགས་ཟམ་པ་ཐང་སྟོང་རྒྱལ་པོ]] [1361?-1485]
 ==འབྲེལ་གཏུགས==
-==== ====
-
+====ཆོས་སྐད====
 * མཛད་པ་པོ: ཤེས་རབ་དཔལ་ལྡན; མིང: རྗེ་གྲུབ་ཐོབ་ཆེན་པོ་ལྕགས་ཟམ་པའི་རྣམ་པར་ཐར་པ་ངོ་ཚར་རྒྱ་མཚོ།   
-* མཛད་པ་པོ: [[lo chen 'gyur med bde chen]] [1540-1615] ; ''Title:''grub pa'i dban phyug chen po lcags zam pa than ston rgyal po'i rnam thar no mtshar kun gsal nor bu'i me long gsar pa'' [http://tbrc.org/link?RID=W23929 TBRC W23929]
+* མཛད་པ་པོ: [[ལོ་ཆེན་འགྱུར་མེད་བདེ་ཆེན]] [1540-1615] ; མིང: གྲུབ་པའི་དབང་ཕྱུག་ཆེན་པོ་ལྕགས་ཟམ་པ་ཐང་སྟོན་རྒྱལ་པོའི་རྣམ་ཐར་ཀུན་གསལ་ནོར་བུའི་མེ་ལོང་གསར་པ། [http://tbrc.org/link?RID=W23929 TBRC W23929]
 
 
 ====དབྱིན་སྐད====
