--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -2,6 +2,8 @@
 
 {{stub}}
 
-==References==
+==འབྲེལ་གཏུགས==
+ 
+* མཛད་པ་པོ: Ardussi, John ; མིང: [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf Formation of the State of Bhutan ('Brug gzhung) in the 17th Century and its Tibetan Antecedents] ''in'' [http://www.digitalhimalaya.com/collections/journals/jbs/index.php Journal of Bhutan Studies], Vol 11 2004, [http://www.bhutanstudies.org.bt Centre for Bhutan Studies], Thimphu.  [http://www.thdl.org/texts/reprints/jbs/JBS_11_02.pdf],[http://www.bhutanstudies.org.bt/admin/pubFiles/v11-2.pdf], [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf] - དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ<br>
 
-* ''Author:'' Ardussi, John ; ''Title:'' [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf Formation of the State of Bhutan ('Brug gzhung) in the 17th Century and its Tibetan Antecedents] ''in'' [http://www.digitalhimalaya.com/collections/journals/jbs/index.php Journal of Bhutan Studies], Vol 11 2004, [http://www.bhutanstudies.org.bt Centre for Bhutan Studies], Thimphu.  [http://www.thdl.org/texts/reprints/jbs/JBS_11_02.pdf],[http://www.bhutanstudies.org.bt/admin/pubFiles/v11-2.pdf], [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf]<br>
+* མཛད་པ་པོ: Sewala Trulku Ngawang Pekar; མིང:[http://www.bhutanstudies.org.bt/admin/pubFiles/mono-zsbdrung.pdf The Introductory Biography of the Hereditary Prince Incarnation (The First Zhabdrung, Ngawang Namgyel)] - དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ 2004.
