/* འབྲེལ་གཏུགས */

--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -7,13 +7,13 @@
 * མཛད་པ་པོ: gtsang mkhan chen 'jam dpal bshes gnyen (1610-1684); མིང:  dpal 'brug pa rin po che ngag dbang rnam rgyal gyi rnam thar rgyas pa chos kyi sprin chen po'i dbyangs. 
 
 
-* མཛད་པ་པོ:[[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) ('brug rje mkhan po 69); མིང:  dpal ldan 'brug pa'i gdul zhing lho phyogs nags mo'i ljongs kyi chos 'byung blo gsar rna ba'i rgyan (lho yi chos 'byung blo gsar rna rgyan). 
+* མཛད་པ་པོ: [[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) ('brug rje mkhan po 69); མིང:  dpal ldan 'brug pa'i gdul zhing lho phyogs nags mo'i ljongs kyi chos 'byung blo gsar rna ba'i rgyan (lho yi chos 'byung blo gsar rna rgyan). 
 
 
 * མཛད་པ་པོ: [[སློབ་དཔོན་པདྨ་ཚེ་དབང]] (b. ); མིང:  'brug gi rgyal rabs| 'brug gsal ba'i sgron me.  [ISBN 99936-631-2-3] p.120-192 
 
 
-*  མཛད་པ་པོ: [[དྲུང་ཆེན་སངས་རྒྱས་རྡོ་རྗེ]]་ (b. ) ; མིང:  dpal ldan 'brug pa rin po che Zhabs drung Nga dbang rnam rgyal gyi rnam thar [ISBN ???] 
+*  མཛད་པ་པོ: [[དྲུང་ཆེན་སངས་རྒྱས་རྡོ་རྗེ]]་ (b. ) ; མིང: དཔལ་ལྡན་འབྲུག་པ་རིན་པོ་ཆེ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱི་རྣམ་ཐར། [ISBN ???] 
  
 
 * མཛད་པ་པོ: Ardussi, John ; མིང: [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf Formation of the State of Bhutan ('Brug gzhung) in the 17th Century and its Tibetan Antecedents] ''in'' [http://www.digitalhimalaya.com/collections/journals/jbs/index.php Journal of Bhutan Studies], Vol 11 2004, [http://www.bhutanstudies.org.bt Centre for Bhutan Studies], Thimphu.  [http://www.thdl.org/texts/reprints/jbs/JBS_11_02.pdf],[http://www.bhutanstudies.org.bt/admin/pubFiles/v11-2.pdf], [http://www.digitalhimalaya.com/collections/journals/jbs/pdf/JBS_11_02.pdf] - དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ<br>
