--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -10,7 +10,7 @@
 * མཛད་པ་པོ: [[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) ('brug rje mkhan po 69); མིང:  dpal ldan 'brug pa'i gdul zhing lho phyogs nags mo'i ljongs kyi chos 'byung blo gsar rna ba'i rgyan (lho yi chos 'byung blo gsar rna rgyan). 
 
 
-* མཛད་པ་པོ: [[སློབ་དཔོན་པདྨ་ཚེ་དབང]] (b. ); མིང:  'brug gi rgyal rabs| 'brug gsal ba'i sgron me.  [ISBN 99936-631-2-3] p.120-192 
+* མཛད་པ་པོ: [[སློབ་དཔོན་པདྨ་ཚེ་དབང]] (b. ); མིང:  འབྲུག་གི་རྒྱལ་རབས།  འབྲུག་གསལ་བའི་སྒྲོན་མེ།. [ISBN 99936-631-2-3] p.120-192 
 
 
 *  མཛད་པ་པོ: [[དྲུང་ཆེན་སངས་རྒྱས་རྡོ་རྗེ]]་ (b. ) ; མིང: དཔལ་ལྡན་འབྲུག་པ་རིན་པོ་ཆེ་ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་གྱི་རྣམ་ཐར། [ISBN ???] 
