--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -7,7 +7,7 @@
 * མཛད་པ་པོ: gtsang mkhan chen 'jam dpal bshes gnyen (1610-1684); མིང:  dpal 'brug pa rin po che ngag dbang rnam rgyal gyi rnam thar rgyas pa chos kyi sprin chen po'i dbyangs. 
 
 
-* མཛད་པ་པོ: [[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) ('brug rje mkhan po 69); མིང:  dpal ldan 'brug pa'i gdul zhing lho phyogs nags mo'i ljongs kyi chos 'byung blo gsar rna ba'i rgyan (lho yi chos 'byung blo gsar rna rgyan). 
+* མཛད་པ་པོ: [[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) (འབྲུག་རྗེ་མཁན་པོ 69); མིང:  དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན། (ལྷོ་ཡི་ཆོས་འབྱུང་བློ་གསར་རྣ་རྒྱན།). 
 
 
 * མཛད་པ་པོ: [[སློབ་དཔོན་པདྨ་ཚེ་དབང]] (b. ); མིང:  འབྲུག་གི་རྒྱལ་རབས།  འབྲུག་གསལ་བའི་སྒྲོན་མེ།. [ISBN 99936-631-2-3] p.120-192 
