/* འབྲེལ་གཏུགས */

--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -4,7 +4,7 @@
 
 ==འབྲེལ་གཏུགས==
 
-* མཛད་པ་པོ: gtsang mkhan chen 'jam dpal bshes gnyen (1610-1684); མིང:  dpal 'brug pa rin po che ngag dbang rnam rgyal gyi rnam thar rgyas pa chos kyi sprin chen po'i dbyangs. 
+* མཛད་པ་པོ: [[གཙང་མཁན་ཆེན་འཇམ་དཔལ་བཤེས་གཉེན]]་ (1610-1684); མིང:  dpal 'brug pa rin po che ngag dbang rnam rgyal gyi rnam thar rgyas pa chos kyi sprin chen po'i dbyangs. 
 
 
 * མཛད་པ་པོ: [[རྗེ་དགེ་འདུན་རིན་ཆེན]] (1926-1997) (འབྲུག་རྗེ་མཁན་པོ 69); མིང:  དཔལ་ལྡན་འབྲུག་པའི་གདུལ་ཞིང་ལྷོ་ཕྱོགས་ནགས་མོའི་ལྗོངས་ཆོས་འབྱུང་བློ་གསར་རྣ་བའི་རྒྱན། (ལྷོ་ཡི་ཆོས་འབྱུང་བློ་གསར་རྣ་རྒྱན།). 
