--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -21,3 +21,4 @@
 * མཛད་པ་པོ: Sewala Trulku Ngawang Pekar; མིང:[http://www.bhutanstudies.org.bt/admin/pubFiles/mono-zsbdrung.pdf The Introductory Biography of the Hereditary Prince Incarnation (The First Zhabdrung, Ngawang Namgyel)] - དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ 2004.
 
 ==འབྲེལ་མཐུད==
+[http://rywiki.tsadra.org/index.php/Shabdrung_Ngawang_Namgyal ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - - རང་འབྱུང་ཡེ་ཤེས་ཝི་ཀི
