--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -22,3 +22,6 @@
 
 ==འབྲེལ་མཐུད==
 [http://rywiki.tsadra.org/index.php/Shabdrung_Ngawang_Namgyal ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - - རང་འབྱུང་ཡེ་ཤེས་ཝི་ཀི
+* [http://www.bhutan.ethno-museum.ac.at/ahtcde00/c-viex/j-02/start.html| ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - འབྲུག་ གངས་ལྡན་ལྷའི་ གཞལ་ཁང་གི་ འགྲེམ་སྟོན།<br>
+* [http://tbrc.org/link?RID=P509 TBRC P509 ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - ནང་བསྟན་དཔེ་ཚོཊ་ལྟེ་གནས<br>
+* [http://www.himalayanart.org/search/set.cfm?setID=1138  ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] <br>
