--- a/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
+++ b/ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ།.mw
@@ -21,7 +21,7 @@
 * མཛད་པ་པོ: Sewala Trulku Ngawang Pekar; མིང:[http://www.bhutanstudies.org.bt/admin/pubFiles/mono-zsbdrung.pdf The Introductory Biography of the Hereditary Prince Incarnation (The First Zhabdrung, Ngawang Namgyel)] - དཔལ་འབྲུག་ཞིབ་འཇུག་ལྟེ་བ 2004.
 
 ==འབྲེལ་མཐུད==
-[http://rywiki.tsadra.org/index.php/Shabdrung_Ngawang_Namgyal ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - - རང་འབྱུང་ཡེ་ཤེས་ཝི་ཀི
+*[http://rywiki.tsadra.org/index.php/Shabdrung_Ngawang_Namgyal ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - རང་འབྱུང་ཡེ་ཤེས་ཝི་ཀི<br>
 * [http://www.bhutan.ethno-museum.ac.at/ahtcde00/c-viex/j-02/start.html| ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - འབྲུག་ གངས་ལྡན་ལྷའི་ གཞལ་ཁང་གི་ འགྲེམ་སྟོན།<br>
 * [http://tbrc.org/link?RID=P509 TBRC P509 ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] - ནང་བསྟན་དཔེ་ཚོཊ་ལྟེ་གནས<br>
 * [http://www.himalayanart.org/search/set.cfm?setID=1138  ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ] <br>
