*Empty MediaWiki Message*

--- a/མཉམ་མེད་སེང་གེ་དགུ.mw
+++ b/མཉམ་མེད་སེང་གེ་དགུ.mw
@@ -1,4 +1,4 @@
-# [[དྷར་མ་སེང་གེ་སངས་རྒྱས་དབོན]] (1177-1237)<br>
+# [[དྷར་མ་སེང་གེ་སངས་རྒྱས་དབོན་རས]] (1177-1237)<br>
 # [[འབྲུག་པ་གཞོན་ནུ་སེང་གེ]] (1200-1266)<br>
 # [[འབྲུག་པ་ཉི་མ་སེང་གེ]] (1251-1287)<br>
 # [[འབྲུག་པ་སེང་གེ་ཤེས་རབ]] (1238-1287)<br>
