*Empty MediaWiki Message*

--- a/སྤ་རོ་རྫོང་ཁག.mw
+++ b/སྤ་རོ་རྫོང་ཁག.mw
@@ -2,7 +2,15 @@
 
 
 སྤ་རོ་རྫོང་ཁག་འདི [[འབྲུག་ཡུལ་|འབྲུག་རྒྱལ་ཁབ་]]ནང་་རྫོང་ཁག 20 ཡོད་པའི་ནང་ལས་ ས་ཆ་དགའ་ཤོས་ཅིག་ཨིན། རྫོང་ཁག་བདག་སྤྱོང་ལྟེ་བ་ [[སྤ་རོ་རིན་སྤུང་རྫོང|རིན་སྤུང་རྫོང་]]འདི་ སྤྱི་ལོ་ 1644 /45 ལོ་ལུ་ དཔལ་ལྡན་འབྲུག་པའི་རྒྱལ་ཁབ་གཅིག་བསྒྲིལ་བཟོ་གནང་མི་ མཐུ་ཆེན་ཆོས་ཀྱི་རྒྱལ་པོ་ [[ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ|ཞབས་དྲུང་ངག་དབང་རྣམ་རྒྱལ་]]རང་གིས་བཞེངས་ཏེ་ ཕྱག་ལས་རབ་གནས་ཐོས་པའི་རྫོང་གཞི་བྱིན་རླབས་ཅན་ཅིག་ཨིན་མས།
-
+*[[སྤ་རོ་རྡོ་དཀར་རྒེད་འོག| རྡོ་དཀར་རྒེད་འོག]]<br>
+*[[སྤ་རོ་ནགསརྒྱ་རྒེད་འོག| ནགསརྒྱ་རྒེད་འོག]]<br>
+*[[སྤ་རོ་ཤར་པའི་རྒེད་འོགས| ཤར་པའི་རྒེད་འོགས]]<br>
+*[[སྤ་རོ་ལུང་གཉིས་རྒེད་འོག| ལུང་གཉིས་རྒེད་འོག]]<br>
+*[[སྤ་རོ་དོལ་ཤར་རྒེད་འོག| དོལ་ཤར་རྒེད་འོག]]<br>
+*[[སྤ་རོ་དོལ་སྟེང་རྒེད་འོག| དོལ་སྟེང་རྒེད་འོག]]<br>
+*[[སྤ་རོ་ཝང་ཅང་རྒེད་འོག| ཝང་ཅང་རྒེད་འོག]]<br>
+*[[སྤ་རོ་ལམ་གོང་རྒེད་འོག|ལམ་གོང་རྒེད་འོག]]<br>
+*[[སྤ་རོ་བཙན་གདོང་རྒེད་འོག| བཙན་གདོང་རྒེད་འོག]]<br>
 
 ==འབྲེལ་མཐུད== 
 *[http://www.paro.gov.bt/  སྤ་རོ་རྫོང་ཁག]
