*Empty MediaWiki Message*

--- a/ཧཱ་རྫོང་ཁག.mw
+++ b/ཧཱ་རྫོང་ཁག.mw
@@ -1,3 +1,5 @@
+[[Image:Bhutan-Haa.png|right|thumb]]
+
 ཧཱ་རྫོང་ཁག་འདི་ [[འབྲུག་ཡུལ་|འབྲུག་རྒྱལ་ཁབ་]]འདི་ནང་རྫོང་ཁག་ 20 ཡོད་པའི་གྲལ་ལས་ ནུབ་ཕྱོགས་མངའ་སྡེའི་རྫོང་ཁག་ཅིག་ཡིན།
 
 ==འབྲེལ་མཐུད== 
