*Empty MediaWiki Message*

--- a/ཧཱ་རྫོང་ཁག.mw
+++ b/ཧཱ་རྫོང་ཁག.mw
@@ -2,6 +2,12 @@
 
 ཧཱ་རྫོང་ཁག་འདི་ [[འབྲུག་ཡུལ་|འབྲུག་རྒྱལ་ཁབ་]]འདི་ནང་རྫོང་ཁག་ 20 ཡོད་པའི་གྲལ་ལས་ ནུབ་ཕྱོགས་མངའ་སྡེའི་རྫོང་ཁག་ཅིག་ཡིན།
 *[[ཧཱ་སྦྱིས་རྒེད་འོག| སྦྱིས་རྒེད་འོག]]<br>
+*[[ཧཱ་སྐར་ཚོགས་རྒེད་འོག| སྐར་ཚོགས་རྒེད་འོག]]<br>
+*[[ཧཱ་དབུས་སུ་རྒེད་འོག| དབུས་སུ་རྒེད་འོག]]<br>
+*[[ཧཱ་ས་དམར་རྒེད་འོག| ས་དམར་རྒེད་འོག]]<br>
+*[[ཧཱ་གསང་སྦས་རྒེད་འོག| གསང་སྦས་རྒེད་འོག]]<br>
+*[[ཧཱ་དགའ་སྐྱིད་གླིང་རྒེད་འོག| དགའ་སྐྱིད་གླིང་རྒེད་འོག]]<br>
+
 
 ==འབྲེལ་མཐུད== 
 *[http://www.haa.gov.bt/  ཧཱ་རྫོང་ཁག]
