*Empty MediaWiki Message*

--- a/ཐིམ་ཕུ་རྫོང་ཁག.mw
+++ b/ཐིམ་ཕུ་རྫོང་ཁག.mw
@@ -1,2 +1,6 @@
 [[Image:Bhutan-Thimphu.png|right|thumb]]
 ཐིམ་ཕུ་རྫོང་ཁག
+*[[སྤ་རོ་བཙན་གདོང་རྒེད་འོག| བཙན་གདོང་རྒེད་འོག]]<br>
+
+==འབྲེལ་མཐུད== 
+*[http://www.thimphu.gov.bt/  ཐིམ་ཕུ་རྫོང་ཁག]
