--- a/གཡང་རྩེ་རྫོང་ཁག.mw
+++ b/གཡང་རྩེ་རྫོང་ཁག.mw
@@ -1,6 +1,6 @@
 [[Image:Bhutan-Trashiyangste.png|right|thumb]] 
 
 ==འབྲེལ་མཐུད== 
-*[http://www.trashiyangtse.gov.bt]
+*[http://www.trashiyangtse.gov.bt བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]
 *[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=35 འབྲུག་གི་འཛུལ་སྒོ་ གཡང་རྩེ་རྫོང་ཁག]
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
