*Empty MediaWiki Message*

--- a/བཀྲིས་གཡང་རྩེ་རྫོང་ཁག.mw
+++ b/བཀྲིས་གཡང་རྩེ་རྫོང་ཁག.mw
@@ -1,5 +1,5 @@
 [[Image:Bhutan-Trashiyangste.png|right|thumb]] 
-བཀྲིས་གཡང་རྩེ་རྫོང་ཁག
+[[བཀྲིས་གཡང་རྩེ་རྫོང་ཁག| བཀྲ་ཤིས་གཡང་རྩེ་རྫོང་ཁག]]
 
 ==འབྲེལ་མཐུད== 
 *[http://www.trashiyangtse.gov.bt བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]
