*Empty MediaWiki Message*

--- a/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
+++ b/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
@@ -1,1 +1,8 @@
+
+[[Image:Bhutan-Samdrup Jongkhar.png|right|thumb]]
+
+==འབྲེལ་མཐུད== 
+
+*[http://www.thimphu.gov.bt/  ཐིམ་ཕུ་རྫོང་ཁག]
+
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
