--- a/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
+++ b/བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག.mw
@@ -1,8 +1,8 @@
-
 [[Image:Bhutan-Samdrup Jongkhar.png|right|thumb]]
 
 ==འབྲེལ་མཐུད== 
 
-*[http://www.thimphu.gov.bt/  ཐིམ་ཕུ་རྫོང་ཁག]
+*[http://www.samdrupjongkhar.gov.bt  བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]
+*[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=29  འབྲུག་གི་འཛུལ་སྒོ་ བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]
 
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
