Redirecting to [[བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]]

--- a/གཡང་རྩེ་རྫོང་ཁག.mw
+++ b/གཡང་རྩེ་རྫོང་ཁག.mw
@@ -5,4 +5,6 @@
 ==འབྲེལ་མཐུད== 
 *[http://www.trashiyangtse.gov.bt བཀྲིས་གཡང་རྩེ་རྫོང་ཁག]
 *[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=35 འབྲུག་གི་འཛུལ་སྒོ་ གཡང་རྩེ་རྫོང་ཁག]
+
+{{R from abbreviation}}
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
