*Empty MediaWiki Message*

--- a/གསར་སྤང་རྫོང་ཁག.mw
+++ b/གསར་སྤང་རྫོང་ཁག.mw
@@ -1,1 +1,9 @@
+[[Image:Bhutan-Sarpang.png|right|thumb]]
+
+གསར་སྤང་རྫོང་ཁག
+
+==འབྲེལ་མཐུད== 
+*[http://www.sarpang.gov.bt  གསར་སྤང་རྫོང་ཁག]
+*[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=33 འབྲུག་གི་འཛུལ་སྒོ་ གསར་སྤང་རྫོང་ཁག]
+
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
