*Empty MediaWiki Message*

--- a/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
+++ b/དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག.mw
@@ -1,2 +1,9 @@
 [[Image:Bhutan-Wangdue_Phodrang.png|right|thumb]]
+
+དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག
+
+==འབྲེལ་མཐུད== 
+*[http://www.wangduephodrang.gov.bt  དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
+*[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=38 འབྲུག་གི་འཛུལ་སྒོ་ དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]
+
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
