--- a/ཀྲོང་གསར་.mw
+++ b/ཀྲོང་གསར་.mw
@@ -1,16 +1,5 @@
-[[Image:TrongsaDzong.jpg|right|thumb|250px|ཀྲོང་གསར་]]
+[[Image:TrongsaDzong.jpg|right|thumb|250px|ཀྲོང་གསར་རྫོང]]
 '''ཀྲོང་གསར་'''
 
-*[[ཐིམ་ཕུ་]]  
-*[[ཕུན་ཚོགས་གླིང་]]
-*[[སྤུ་ན་ཁ་]] 
-*[[བསམ་གྲུབ་ལྗོངས་མཁར་]] 
-*[[གསར་སྤང་]] 
-*[[སྤ་རོ་]] 
-*[[བཀྲིས་སྒང་]] 
-*[[དབང་འདུས་ཕོ་བྲང་]] 
-*[[ཏ་ག་རྫོང་]] 
-*[[ཀྲོང་གསར་]] 
-*[[འབྲུག་ཡུལ་ ]]
 
 [[en:Trongsa]]
