*Empty MediaWiki Message*

--- a/པདྨ་དགའ་ཚལ་རྫོང་ཁག.mw
+++ b/པདྨ་དགའ་ཚལ་རྫོང་ཁག.mw
@@ -1,2 +1,6 @@
 [[Image:Bhutan-Pemagatshel.png|right|thumb]]
+
+==འབྲེལ་མཐུད== 
+*[http://www.pemagatshel.gov.bt  པདྨ་དགའ་ཚལ་རྫོང་ཁག]
+*[http://www.bhutan.gov.bt/government/dzongkhags.php?dz_id=27 འབྲུག་གི་འཛུལ་སྒོ་ པདྨ་དགའ་ཚལ་རྫོང་ཁག]
 [[Category:འབྲུག་གི་རྫོང་ཁག]]
