*Empty MediaWiki Message*

--- a/ཐིམ་ཕུ་རྫོང་ཁག.mw
+++ b/ཐིམ་ཕུ་རྫོང་ཁག.mw
@@ -3,13 +3,13 @@
 *[[ཐིམ་ཕུ་ གླིང་བཞི་དྲུང་ཁག| གླིང་བཞི་དྲུང་ཁག]]<br>
 *[[ཐིམ་ཕུ་སྲོས་རྒེད་འོག| སྲོས་རྒེད་འོག]]<br>
 *[[ཐིམ་ཕུ་ན་རོ་རྒེད་འོག| ན་རོ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
-*[[ཐིམ་ཕུ་ ་རྒེད་འོག| ་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་ཀ་ཝང་རྒེད་འོག| ཀ་ཝང་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་ཅང་རྒེད་འོག| ཅང་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་བར་པའི་རྒེད་འོག| བར་པའི་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་སྟོད་པའི་རྒེད་འོག| སྟོད་པའི་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་དར་དཀར་རྒེད་འོག| དར་དཀར་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་དགེ་བསྙེན་རྒེད་འོག| དགེ་བསྙེན་རྒེད་འོག]]<br>
+*[[ཐིམ་ཕུ་སྨད་ཝང་རྒེད་འོག| སྨད་ཝང་རྒེད་འོག]]<br>
 
 
 
