*Empty MediaWiki Message*

--- a/ཐིམ་ཕུག།.mw
+++ b/ཐིམ་ཕུག།.mw
@@ -1,6 +1,6 @@
 [[Image:Tashichoedzong-Bhutan-2001.JPG|right|thumb|250px|ཐིམ་ཕུ་]]
 [[Image:ThimphuView.jpg|right|thumb|240px]]
-'''ཐིམ་ཕུ་''' 
+'''ཐིམ་ཕུ་''' 27.48°N 89.7°E - BTTHI 
 
 *[[ཐིམ་ཕུ་]]  
 *[[ཕུན་ཚོགས་གླིང་]]
