--- a/སྤ་རོ་རིན་སྤུང་རྫོང.mw
+++ b/སྤ་རོ་རིན་སྤུང་རྫོང.mw
@@ -1,1 +1,2 @@
 [[image:Bhutan dzong at paro.jpg|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:'' Keith Mason ]]
+[[Image:Rinpung_Dzong_Paro_2007-11-11_CJF.JPG|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:'' Keith Mason ]]
