*Empty MediaWiki Message*

--- a/སྤ་རོ་རིན་སྤུང་རྫོང.mw
+++ b/སྤ་རོ་རིན་སྤུང་རྫོང.mw
@@ -1,4 +1,2 @@
 [[image:Bhutan dzong at paro.jpg|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:'' Keith Mason ]]
-[[Image:Rinpung_Dzong_Paro_2007-11-11_CJF.JPG|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:''[[User:CFynn]] ]]
-http://dz.wikipedia.org/w/index.php?title=%E0%BD%A6%E0%BE%A4%E0%BC%8B%E0%BD%A2%E0%BD%BC%E0%BC%8B%E0%BD%A2%E0%BD%B2%E0%BD%93%E0%BC%8B%E0%BD%A6%E0%BE%A4%E0%BD%B4%E0%BD%84%E0%BC%8B%E0%BD%A2%E0%BE%AB%E0%BD%BC%E0%BD%84&action=edit
-ཞུན་དག།
+[[Image:Rinpung_Dzong_Paro_2007-11-11_CJF.JPG|thumb|right|300px|སྤ་རོ་རིན་སྤུང་རྫོང &nbsp; &nbsp; &nbsp;''Photo by:''[[User:CFynn| Christopher Fynn]] ]]
