--- a/ཛིམ་བབ་ཝེ་.mw
+++ b/ཛིམ་བབ་ཝེ་.mw
@@ -17,7 +17,7 @@
 [[bpy:জিম্বাবুয়ে]]
 [[br:Zimbabwe]]
 [[bs:Zimbabve]]
-[[ca:Zimbabwe]]
+[[ca:Zimbabue]]
 [[crh:Zimbabve]]
 [[cs:Zimbabwe]]
 [[cv:Зимбабве]]
