*Empty MediaWiki Message*

--- a/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
+++ b/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
@@ -12,18 +12,13 @@
 
 ང་བཅས་རའི་མི་དབང་འབྲུག་རྒྱལ་བཞི་པའི་ཐུགས་རིག་མཁས་པའི་བཀྲིན་ལས་དང་ མི་དབང་རྒྱལ་ཡུམ་ཨ་ཞེ་མཆོག་གི་ ཐུགས་སྨོན་ལས་བརྟེན་ འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་འདི་ ས་གནས་འདི་ཁར་སྤོ་བཤུད་འབད་ཞིནམ་ལས་ཚུར་ དཔེ་མཛོད་ཀྱི་མཐུན་རྐྱེན་ཚུ་ གོང་འཕེལ་གནམ་མེད་ས་མེད་འགྱོ་སྟེ་ཡོདཔ་ཨིན།། ད་ལྟོ་དཔེ་མཛོད་སྒྲིང་ཁྱིམ་གཙོ་བོའི་གཡས་ཁ་ལུ་ཡོད་པའི་ ཡིག་རྙིང་གཉེར་འཇོང་ཁང་ངམ་ གཏན་མཛོད་ཁང་འདི་ སྤྱི་ལོ་ ༢༠༠༠ ལོ་ལུ་ ཌེན་མརྐ་རྒྱལ་གཞུང་གི་མ་དངུལ་གྱི་རྒྱབ་སྐྱོར་མཛད་ཐོག་ལས་ རྒྱལ་ཡོངས་ནང་ དཀོན་དྲགས་ཅན་གྱི་རྒྱལ་བའི་གསུང་རབ་ཚུ་ ཉེན་སྲུང་གྱི་དོན་ལུ་དང་ མ་འོངས་རྒྱུན་སྐྱོངས་ཀྱི་དོན་ལུ་དམིགས་ཏེ་ སྤྱི་ལོ་ ༢༠༠༤ ལུ་ བསྒྲུབས་ཏེ་ཡོད་པའི་ སྒྲིང་ཁྱིམ་འདི་ནང་ལུ་མེ་རྐྱེན་གྱི་ཉེན་བརྡ་དང་ བསིལ་དྲོད་ཚན་མཉམ་བཟོ་ནིའི་ དེང་སང་གི་འཕྲུལ་ཆའི་མཐུན་རྐྱེན་ཚུ་ གཞི་བཙུགས་འབད་དེ་ཡོདཔ་ཨིན། དེ་ལས་དཔེ་མཛོད་ཀྱི་གཡོན་ཁ་ཐུག་ལུ་ བདག་སྐྱོང་གི་སྒྲིང་ཁྱིམ་གསརཔ་འདི་ སྤྱི་ལོ་ ༢༠༠༥ ལོ་ལུ་ རྒྱ་གར་གཞུང་གིས་མ་དངུལ་གྱི་གྲོགས་ གནང་ཐོག་ལས་ལས་ སྤྱི་ལོ་ ༢༠༠༧ ལོ་མཇུག་བསྡུ་ཁམ་ལུ་ བསྒྲུབས་ཚར་སྟེ་ཡོདཔ་ཨིན།།
 
-ང་བཅས་འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ཀྱི་དམིགས་དོན་གཙོ་བོ་རང་་་ 
-
-•	འབྲུག་པའི་སྔོན་དང་ཕུགས་ཀྱི་ ཆོས་ལུགས་དང་འབྲེལ་བའི་ རིག་གཞུང་དང་རྒྱལ་རབས་ཅན་གྱི་ཕྱག་དཔེ་ མཁོ་བསྒྲུབ་འབད་ནི་དང་ ལམ་ལུགས་སྲོལ་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་འཐབ་ནི།
-•	ཤེས་ཡོན་འཕྲོ་མཐུད་བལྟ་མི་ཚུ་དང་ ཞིབ་འཚོལ་པ་ཚུ་ལུ་ མཐུན་རྐྱེན་མཁོ་སྤྲོད་འབད་ནི།
-•	དཀོན་དྲགས་ཅན་གྱི་ཕྱག་དཔེ་རྙིངམ་ཚུ་དང་ པར་མ་དང་བྲིས་མའི་ཕྱག་དཔེ་ཚུ་ཉེན་སྲུང་དང་རྒྱུན་སྐྱོང་འཐབ་ནི།
-•	སྔར་སྲོལ་ཁ་རྒྱུན་ལས་བརྒྱུད་པའི་སྲུང་ཚུ་དང་ རིག་གཞུང་དང་འབྲེལ་བའི་ཡིག་ཆ་ཚུ་ ཞིབ་འཚོལ་འབད་དེ་ཐོ་བཀོད་བརྐྱབ་ནི།
-•	སྔར་སྲོལ་རིག་གཞུང་གི་ཕྱག་དཔེ་དང་ བརྗོད་དོན་མཚུངས་པའི་ཕྱག་དཔེ་ཚུ་པར་སྐྲུན་འབད་ནི་དང་ གོང་འཕེལ་གཏང་ནི་ཚུ་ཨིན།། 
-
-
+ང་བཅས་འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ཀྱི་དམིགས་དོན་གཙོ་བོ་རང་་་<br> 
+*འབྲུག་པའི་སྔོན་དང་ཕུགས་ཀྱི་ ཆོས་ལུགས་དང་འབྲེལ་བའི་ རིག་གཞུང་དང་རྒྱལ་རབས་ཅན་གྱི་ཕྱག་དཔེ་ མཁོ་བསྒྲུབ་འབད་ནི་དང་ ལམ་ལུགས་སྲོལ་ཚུ་ མི་ཉམས་རྒྱུན་སྐྱོང་འཐབ་ནི།<br>
+*ཤེས་ཡོན་འཕྲོ་མཐུད་བལྟ་མི་ཚུ་དང་ ཞིབ་འཚོལ་པ་ཚུ་ལུ་ མཐུན་རྐྱེན་མཁོ་སྤྲོད་འབད་ནི།<br>
+*དཀོན་དྲགས་ཅན་གྱི་ཕྱག་དཔེ་རྙིངམ་ཚུ་དང་ པར་མ་དང་བྲིས་མའི་ཕྱག་དཔེ་ཚུ་ཉེན་སྲུང་དང་རྒྱུན་སྐྱོང་འཐབ་ནི།<br>
+*སྔར་སྲོལ་ཁ་རྒྱུན་ལས་བརྒྱུད་པའི་སྲུང་ཚུ་དང་ རིག་གཞུང་དང་འབྲེལ་བའི་ཡིག་ཆ་ཚུ་ ཞིབ་འཚོལ་འབད་དེ་ཐོ་བཀོད་བརྐྱབ་ནི།<br>
+*སྔར་སྲོལ་རིག་གཞུང་གི་ཕྱག་དཔེ་དང་ བརྗོད་དོན་མཚུངས་པའི་ཕྱག་དཔེ་ཚུ་པར་སྐྲུན་འབད་ནི་དང་ གོང་འཕེལ་གཏང་ནི་ཚུ་ཨིན།།<br> 
 
 
 ==འབྲེལ་མཐུད== 
 * [http://www.library.gov.bt/index-DZ.html འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ གདོང་ཤོག]
-
-{{stub}}
