--- a/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
+++ b/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
@@ -22,3 +22,5 @@
 
 ==འབྲེལ་མཐུད== 
 * [http://www.library.gov.bt/index-DZ.html འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ གདོང་ཤོག]
+
+[[en: National Library of Bhutan]]
