--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -10,6 +10,74 @@ Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
 
 <div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
+<inputbox>
+ type=create
+ width=90
+ bgcolor=#ffffff
+ preload=Template:Standard content for new page
+ editintro=Template:Instructions
+ default=
+</inputbox>
+</div>
+
+{|
+|- 
+| width="50%" valign="middle" | 
+{| width="100%"  border="0" cellspacing="0" cellpadding="5"
+<!---------------------------------------------->
+| width="10%" | [[Image:Nuvola_apps_kcoloredit.png|40px|center]]
+| width="90%" style="font-size: 95%; " |  '''[[འབྲུག་རྒྱལ་ཁབ་]]'''<br/> 
+[[འབྲུག་ཡུལ་]]&nbsp;- [[འབྲུག་]]&nbsp;- [[ཐིམ་ཕུ་]]&nbsp;- [[རྫོང་ཁ་]]&nbsp; [[དངུལ་ཀྲམ་]]&nbsp;- [[རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་]]&nbsp;- [[འབྲུག་ཙན་དན་]]&nbsp;- [[ཕུན་ཚོགས་གླིང་]]&nbsp;- [[སྤུ་ན་ཁ་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་]]&nbsp;- [[གསར་སྤང་]]&nbsp;- [[སྤ་རོ་]]&nbsp;- [[བཀྲིས་སྒང་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་]]&nbsp;- [[ཏ་ག་རྫོང་]]&nbsp;- [[ཀྲོང་གསར་]]&nbsp;- 
+<!---------------------------------------------->
+|-
+<!---------------------------------------------->
+| [[Image:Nuvola apps edu languages.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''[[རྫོང་ཁག་]]'''<br/>
+[[ཀྲོང་གསར་རྫོང་ཁག་]]&nbsp;- [[གཞལམ་སྒང་རྫོང་ཁག་]]&nbsp;- [[གཡང་རྩེ་རྫོང་ཁག་]]&nbsp;- [[གསར་སྤང་རྫོང་ཁག་]]&nbsp;- [[ཆུ་ཁ་རྫོང་ཁག་]]&nbsp;- [[ཐིམ་ཕུ་རྫོང་ཁག་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་]]&nbsp;- [[དར་དཀར་ན་རྫོང་ཁག་]]&nbsp;- [[པདྨ་དགའ་ཚལ་རྫོང་ཁག་]]&nbsp;- [[བཀྲིས་སྒང་རྫོང་ཁག་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་]]&nbsp;- [[བསམ་རྩེ་རྫོང་ཁག་]]&nbsp;- [[བུམ་ཐང་རྫོང་ཁག་]]&nbsp;- [[མགར་ས་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[རྩི་རང་རྫོང་ཁག་]]&nbsp;- [[ལྷུན་རྩེ་རྫོང་ཁག་]]&nbsp;- [[སྤ་རོ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;-  [[ཧཱ་རྫོང་ཁག་]]&nbsp;- 
+
+<!---------------------------------------------->
+|-
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_bookcase.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Languages'''<br/>
+[[English language]]&nbsp;- [[Tibetan language]]&nbsp;- [[Russian language]]&nbsp;- [[Chinese language]]&nbsp;- [[French language]]&nbsp;-
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_kdmconfig.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Religion'''<br/>
+[[Christianity]]&nbsp;- [[Buddhism]]&nbsp;- [[Hinduism]]&nbsp;- [[Judaism]]&nbsp;- [[Islam]]&nbsp;- [[Atheism]]&nbsp;- 
+<!---------------------------------------------->
+|}
+| width="50%" valign="top" | 
+{| width="100%"  border="0" cellspacing="0" cellpadding="5"
+|- 
+<!---------------------------------------------->
+| width="10%" | [[Image:Nuvola_apps_kalzium.png|40px|center]]
+| width="90%" style="font-size: 95%;" | '''[[ཨེ་ཤར་ཡ་]]'''<br/>
+[[ཇ་པཱན་]]&nbsp;- [[རྒྱ་མི་]]&nbsp;- [[སོག་པོ་]]&nbsp;- [[ཏའི་ཝཱན་]]&nbsp;- [[ཀམ་བོ་ཌི་ཡ་]]&nbsp;- [[མེ་མར་]]&nbsp;- [[ཐཱའི་ལེནཌ་]]&nbsp;- [[ལྷོ་ཀོ་རི་ཡ་]]&nbsp;- [[བྱང་ཀོ་རི་ཡ་]]&nbsp;- [[རྒྱ་གར་]]&nbsp;- [[ཤྲཱྀ་ལངཀ་]]&nbsp;- [[བལ་ཡུལ་]]&nbsp;- [[བངྒ་ལ་དེཤ་]]&nbsp;- [[མ་ལེ་ཤི་ཡ་]]&nbsp;- [[ཨཕ་ག་ནིསི་ཏཱན་]]&nbsp;- [[ཨི་རཱན་]]&nbsp;- [[ལེ་བཱ་ནཱོན་]]&nbsp;- [[ཨིཛ་རཱེལ་]]&nbsp;- [[ཀུ་ཝེཊ་]]&nbsp;- [[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]&nbsp;- [[ཨུཛ་བེ་ཀིསི་ཏཱན་]]&nbsp;- [[ཏ་ཇག་ཀིསི་ཏཱན་]]&nbsp;- [[བཧ་རེན་]]&nbsp;- [[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_display.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA; " | '''Others'''<br/>
+[[ཨཕ་རི་ཀ་]]&nbsp;- [[ཨེན་ཊཱག་ཊི་ཀ་]]&nbsp;-  [[གཟའ་ཟླ་བ་]]&nbsp;- [[གཟའ་མིག་དམར་]]&nbsp;- [[གཟའ་ལླག་པ་]]&nbsp;- [[གཟའ་ཕུར་བུ་]]&nbsp;- [[གཟའ་པ་སངས་]]&nbsp;- [[གཟའ་སྤེན་པ་]]&nbsp;- [[གཟའ་ཉི་མ་]]&nbsp;- [[སྤྱི་ཟླཝ་དང་པོ་]]&nbsp;- [[སྤྱི་ཟླཝ་གཉིས་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་གསུམ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཞི་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་ལྔ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་དྲུག་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བདུན་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བརྒྱད་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་དགུ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་གཅིག་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་གཉིས་པ་]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_atlantik.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''University'''<br/>
+[[wp/rar/University|University]]&nbsp;- [[wp/rar/Science|Science]]&nbsp;- [[wp/rar/Chemistry|Chemistry]]&nbsp;- [[wp/rar/Physics|Physics]]&nbsp;- [[wp/rar/Biology|Biology]]&nbsp;- [[wp/rar/Engineering|Engineering]]&nbsp;- [[wp/rar/Geology|Geology]]&nbsp;- [[wp/rar/Astronomy|Astronomy]]&nbsp;- [[wp/rar/Business|Business]]&nbsp;- [[wp/rar/Accounting|Accounting]]&nbsp;- [[wp/rar/Economics|Economics]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola apps xmag.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Sports'''<br/>
+[[wp/rar/Basketball|Basketball]]&nbsp;- [[wp/rar/Tennis|Tennis]]&nbsp;- [[wp/rar/Soccer|Soccer]]&nbsp;- [[wp/rar/Rugby|Rugby]]&nbsp;- [[wp/rar/Cricket|Cricket]]&nbsp;- [[wp/rar/Netball|Netball]]&nbsp;- [[wp/rar/Hockey|Hockey]]&nbsp;- [[wp/rar/Bowling|Bowling]]&nbsp;- 
+<!---------------------------------------------->
+|}
+|}
+
 '''Other wikis'''
 <small>[http://meta.wikipedia.org Meta-Wiki] | [http://dz.wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
 </div>
