Moved to Dzongkha title

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -1,1 +1,341 @@
-#redirect[[Main Page]]
+__NOTOC__
+__NOTOC__
+{| wikitable border="2" width="100%"
+|<center><big><big> Welcome to Dzongkha Wikipedia! </big><br />
+[[Image:Flag of Bhutan.svg|left|thumb|100px]] 
+[[Image:Bhutan emblem.png|right|thumb|90px]]
+
+==This subdomain is reserved for the creation of a Wikipedia in the <b>[[:en:Dzongkha language|Dzongkha language]]</b>==
+
+If you speak Dzongkha and think it would be cool to have your own Encyclopedia then '''you''' can make it.
+
+{{NUMBEROFARTICLES}} [[Special:Allpages|articles]] currently exist.
+
+'''''Go ahead. Translate this page and start working on your Encyclopedia.'''''
+
+Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
+
+<div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
+
+
+{|
+|- 
+| width="50%" valign="middle" | 
+{| width="100%"  border="0" cellspacing="0" cellpadding="5"
+<!---------------------------------------------->
+| width="10%" | [[Image:Nuvola_apps_kcoloredit.png|40px|center]]
+| width="90%" style="font-size: 95%; " |  '''[[འབྲུག་རྒྱལ་ཁབ་]]'''<br/> 
+[[འབྲུག་ཡུལ་]]&nbsp;- [[འབྲུག་]]&nbsp;- [[ཐིམ་ཕུ་]]&nbsp;- [[རྫོང་ཁ་]]&nbsp; [[དངུལ་ཀྲམ་]]&nbsp;- [[རྒྱལ་པོ་འཇིགས་མེད་ཁེ་གསར་རྣམ་རྒྱལ་དབང་པྱུག་]]&nbsp;- [[འབྲུག་ཙན་དན་]]&nbsp;- [[ཕུན་ཚོགས་གླིང་]]&nbsp;- [[སྤུ་ན་ཁ་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་]]&nbsp;- [[གསར་སྤང་]]&nbsp;- [[སྤ་རོ་]]&nbsp;- [[བཀྲིས་སྒང་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་]]&nbsp;- [[ཏ་ག་རྫོང་]]&nbsp;- [[ཀྲོང་གསར་]]&nbsp;- 
+<!---------------------------------------------->
+|-
+<!---------------------------------------------->
+| [[Image:Nuvola apps edu languages.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''[[རྫོང་ཁག་]]'''<br/>
+[[ཀྲོང་གསར་རྫོང་ཁག་]]&nbsp;- [[གཞལམ་སྒང་རྫོང་ཁག་]]&nbsp;- [[གཡང་རྩེ་རྫོང་ཁག་]]&nbsp;- [[གསར་སྤང་རྫོང་ཁག་]]&nbsp;- [[ཆུ་ཁ་རྫོང་ཁག་]]&nbsp;- [[ཐིམ་ཕུ་རྫོང་ཁག་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་]]&nbsp;- [[དར་དཀར་ན་རྫོང་ཁག་]]&nbsp;- [[པདྨ་དགའ་ཚལ་རྫོང་ཁག་]]&nbsp;- [[བཀྲིས་སྒང་རྫོང་ཁག་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་]]&nbsp;- [[བསམ་རྩེ་རྫོང་ཁག་]]&nbsp;- [[བུམ་ཐང་རྫོང་ཁག་]]&nbsp;- [[མགར་ས་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[རྩི་རང་རྫོང་ཁག་]]&nbsp;- [[ལྷུན་རྩེ་རྫོང་ཁག་]]&nbsp;- [[སྤ་རོ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;-  [[ཧཱ་རྫོང་ཁག་]]&nbsp;- 
+
+<!---------------------------------------------->
+|-
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_bookcase.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Languages'''<br/>
+[[English language]]&nbsp;- [[Tibetan language]]&nbsp;- [[Russian language]]&nbsp;- [[Chinese language]]&nbsp;- [[French language]]&nbsp;-
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_kdmconfig.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Religion'''<br/>
+[[Christianity]]&nbsp;- [[Buddhism]]&nbsp;- [[Judaism]]&nbsp;- [[Atheism]]&nbsp;- 
+<!---------------------------------------------->
+|}
+| width="50%" valign="top" | 
+{| width="100%"  border="0" cellspacing="0" cellpadding="5"
+|- 
+<!---------------------------------------------->
+| width="10%" | [[Image:Nuvola_apps_kalzium.png|40px|center]]
+| width="90%" style="font-size: 95%;" | '''[[ཨེ་ཤར་ཡ་]]'''<br/>
+[[ཇ་པཱན་]]&nbsp;- [[རྒྱ་མི་]]&nbsp;- [[སོག་པོ་]]&nbsp;- [[ཏའི་ཝཱན་]]&nbsp;- [[ཀམ་བོ་ཌི་ཡ་]]&nbsp;- [[མེ་མར་]]&nbsp;- [[ཐཱའི་ལེནཌ་]]&nbsp;- [[ལྷོ་ཀོ་རི་ཡ་]]&nbsp;- [[བྱང་ཀོ་རི་ཡ་]]&nbsp;- [[རྒྱ་གར་]]&nbsp;- [[ཤྲཱྀ་ལངཀ་]]&nbsp;- [[བལ་ཡུལ་]]&nbsp;- [[བངྒ་ལ་དེཤ་]]&nbsp;- [[མ་ལེ་ཤི་ཡ་]]&nbsp;- [[ཨཕ་ག་ནིསི་ཏཱན་]]&nbsp;- [[ཨི་རཱན་]]&nbsp;- [[ལེ་བཱ་ནཱོན་]]&nbsp;- [[ཨིཛ་རཱེལ་]]&nbsp;- [[ཀུ་ཝེཊ་]]&nbsp;- [[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]&nbsp;- [[ཨུཛ་བེ་ཀིསི་ཏཱན་]]&nbsp;- [[ཏ་ཇག་ཀིསི་ཏཱན་]]&nbsp;- [[བཧ་རེན་]]&nbsp;- [[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_display.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA; " | '''Others'''<br/>
+[[ཨཕ་རི་ཀ་]]&nbsp;- [[ཨེན་ཊཱག་ཊི་ཀ་]]&nbsp;-  [[གཟའ་ཟླ་བ་]]&nbsp;- [[གཟའ་མིག་དམར་]]&nbsp;- [[གཟའ་ལླག་པ་]]&nbsp;- [[གཟའ་ཕུར་བུ་]]&nbsp;- [[གཟའ་པ་སངས་]]&nbsp;- [[གཟའ་སྤེན་པ་]]&nbsp;- [[གཟའ་ཉི་མ་]]&nbsp;- [[སྤྱི་ཟླཝ་དང་པོ་]]&nbsp;- [[སྤྱི་ཟླཝ་གཉིས་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་གསུམ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཞི་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་ལྔ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་དྲུག་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བདུན་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བརྒྱད་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་དགུ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་གཅིག་པ་]]&nbsp;- [[སྤྱི་ཟླཝ་བཅུ་གཉིས་པ་]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola_apps_atlantik.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''University'''<br/>
+[[wp/rar/University|University]]&nbsp;- [[wp/rar/Science|Science]]&nbsp;- [[wp/rar/Chemistry|Chemistry]]&nbsp;- [[wp/rar/Physics|Physics]]&nbsp;- [[wp/rar/Biology|Biology]]&nbsp;- [[wp/rar/Engineering|Engineering]]&nbsp;- [[wp/rar/Geology|Geology]]&nbsp;- [[wp/rar/Astronomy|Astronomy]]&nbsp;- [[wp/rar/Business|Business]]&nbsp;- [[wp/rar/Accounting|Accounting]]&nbsp;- [[wp/rar/Economics|Economics]]&nbsp;- 
+<!---------------------------------------------->
+|- 
+<!---------------------------------------------->
+| [[Image:Nuvola apps xmag.png|40px|center]]
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''Sports'''<br/>
+[[wp/rar/Basketball|Basketball]]&nbsp;- [[wp/rar/Tennis|Tennis]]&nbsp;- [[wp/rar/Soccer|Soccer]]&nbsp;- [[wp/rar/Rugby|Rugby]]&nbsp;- [[wp/rar/Cricket|Cricket]]&nbsp;- [[wp/rar/Netball|Netball]]&nbsp;- [[wp/rar/Hockey|Hockey]]&nbsp;- [[wp/rar/Bowling|Bowling]]&nbsp;- 
+<!---------------------------------------------->
+|}
+|}
+
+<inputbox>
+ type=create
+ width=90
+ bgcolor=#ffffff
+ preload=Template:Standard content for new page
+ editintro=Template:Instructions
+ default=
+</inputbox>
+</div>
+
+'''Other wikis'''
+<small>[http://meta.wikipedia.org Meta-Wiki] | [http://dz.wiktionary.org Wikitonary] | [http://wikibooks.org Wikibooks] | [http://wikiquote.org Wikiquote] | [http://wikisource.org Wikisource]</small>
+</div>
+
+[[aa:]]
+[[ab:]]
+[[af:]]
+[[ak:]]
+[[als:]]
+[[am:]]
+[[an:]]
+[[ang:]]
+[[ar:]]
+[[arc:]]
+[[as:]]
+[[ast:]] <!-- missing WikiMedia 1.3 support -->
+[[av:]]
+[[ay:]]
+[[az:]]
+[[ba:]]
+[[bar:]]
+[[bat-smg:]]
+[[be:]]
+[[be-x-old:]]
+[[bg:]]
+[[bh:]]
+[[bi:]]
+[[bm:]]
+[[bn:]]
+[[bo:]]
+[[bpy:]]
+[[br:]]
+[[bs:]]
+[[bug:]]
+[[bxr:]]
+[[ca:]]
+[[cbk-zam:]]
+[[cdo:]]
+[[ce:]]
+[[ceb:]]
+[[ch:]]
+[[cho:]]
+[[chr:]]
+[[chy:]]
+[[co:]]
+[[cr:]]
+[[cs:]]
+[[csb:]]
+[[cu:]]
+[[cv:]]
+[[cy:]]
+[[da:]]
+[[de:]]
+[[diq:]]
+[[dv:]]
+[[ee:]]
+[[el:]]
+[[eml:]]
+[[en:]]
+[[eo:]]
+[[es:]]
+[[et:]]
+[[eu:]]
+[[fa:]]
+[[ff:]]
+[[fi:]]
+[[fiu-vro:]]
+[[fj:]]
+[[fo:]]
+[[fr:]]
+[[frp:]]
+[[fur:]]
+[[fy:]]
+[[ga:]]
+[[gd:]]
+[[gl:]]
+[[glk:]]
+[[gn:]]
+[[got:]]
+[[gu:]]
+[[gv:]]
+[[ha:]]
+[[hak:]]
+[[haw:]]
+[[he:]]
+[[hi:]]
+[[ho:]]
+[[hr:]]
+[[hsb:]]
+[[ht:]]
+[[hu:]]
+[[hy:]]
+[[hz:]]
+[[ia:]]
+[[id:]]
+[[ie:]]
+[[ig:]]
+[[ii:]]
+[[ik:]]
+[[ilo:]]
+[[io:]]
+[[is:]]
+[[it:]]
+[[iu:]]
+[[ja:]]
+[[jbo:]]
+[[jv:]]
+[[ka:]]
+[[kab:]]
+[[kg:]]
+[[ki:]]
+[[kj:]]
+[[kk:]]
+[[kl:]]
+[[km:]]
+[[kn:]]
+[[ko:]]
+[[kr:]]
+[[ks:]]
+[[ksh:]]
+[[ku:]]
+[[kv:]]
+[[kw:]]
+[[ky:]]
+[[la:]]
+[[lad:]]
+[[lb:]]
+[[lbe:]]
+[[lg:]]
+[[li:]]
+[[lij:]]
+[[lmo:]]
+[[ln:]] <!-- missing WikiMedia 1.3 support -->
+[[lo:]]
+[[lt:]]
+[[lv:]]
+[[map-bms:]]
+[[mg:]]
+[[mh:]]
+[[mi:]]
+[[mk:]]
+[[ml:]]
+[[mn:]]
+[[mo:]]
+[[mr:]]
+[[ms:]]
+[[mt:]] <!-- missing WikiMedia 1.3 support -->
+[[mus:]]
+[[my:]]
+[[mzn:]]
+[[na:]]
+[[nah:]]
+[[nap:]]
+[[nds:]]
+[[nds-nl:]]
+[[ne:]]
+[[new:]]
+[[ng:]]
+[[nl:]]
+[[nn:]]
+[[no:]]
+[[nov:]]
+[[nrm:]]
+[[nv:]]
+[[oc:]]
+[[om:]]
+[[or:]]
+[[os:]]
+[[pa:]]
+[[pag:]]
+[[pam:]]
+[[pap:]]
+[[pdc:]]
+[[pi:]]
+[[pih:]]
+[[pl:]]
+[[pms:]]
+[[ps:]]
+[[pt:]]
+[[qu:]]
+[[rm:]]
+[[rmy:]]
+[[rn:]]
+[[ro:]]
+[[roa-rup:]]
+[[roa-tara:]]
+[[ru:]]
+[[rw:]]
+[[sa:]]
+[[sc:]]
+[[scn:]]
+[[sco:]]
+[[sd:]]
+[[se:]]
+[[sg:]]
+[[sh:]]
+[[si:]]
+[[simple:]]
+[[sk:]]
+[[sl:]]
+[[sm:]]
+[[sn:]]
+[[so:]]
+[[sq:]]
+[[sr:]]
+[[ss:]]
+[[st:]]
+[[su:]]
+[[sv:]]
+[[sw:]]
+[[ta:]]
+[[te:]]
+[[tet:]]
+[[tg:]]
+[[th:]]
+[[ti:]]
+[[tk:]]
+[[tl:]]
+[[tn:]]
+[[to:]]
+[[tokipona:]]
+[[tpi:]]
+[[tr:]]
+[[ts:]]
+[[tt:]]
+[[tum:]]
+[[tw:]]
+[[ty:]]
+[[udm:]]
+[[ug:]]
+[[uk:]]
+[[ur:]]
+[[uz:]]
+[[ve:]]
+[[vec:]]
+[[vi:]]
+[[vls:]]
+[[vo:]]
+[[wa:]]
+[[war:]]
+[[wo:]]
+[[wuu:]]
+[[xal:]]
+[[xh:]]
+[[yi:]]
+[[yo:]]
+[[za:]]
+[[zea:]]
+[[zh:]]
+[[zh-classical:]]
+[[zh-min-nan:]]
+[[zh-yue:]]
+[[zu:]]
