*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -13,8 +13,9 @@ If you speak Dzongkha and think it would be cool to have your own Encyclopedia t
 
 '''''Go ahead. Translate this page and start working on your Encyclopedia.'''''
 
-Look at [[m:help:How to start a new Wikipedia|How to start a new Wikipedia]].
+Look at [[:en:Wikipedia:Cheatsheet|How to edit a page]].
 
+You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan Unicode script] to correctly view in Dzongkha. 
 <div style="width:85%; padding:10px; background-color:#ffffcc; border:1px solid #ffff66;">
 
 
