*Empty MediaWiki Message*

--- a/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
+++ b/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
@@ -8,7 +8,7 @@
 
 དཔེ་མཛོད་རྙིངམ་དེ་ནང་ལུ་ ཕྱག་དཔེ་ཚུ་ རིམ་པ་བཞིན་དུ་གོང་འཕེལ་འགྱོ་བའི་སྟབས་ཀྱིས་ ས་གནས་དེ་ནང་དཔེ་ཆ་ མ་ཤོང་པའི་དཀའ་ངལ་བྱུངམ་ལས་ དེ་སེལ་ཐབས་ལུ་དབུ་རྩེའི་བར་ཐོག་ལས་ གནས་སྐབས་ཅིག་གི་རིང་ལུ་ ལྕང་སྒང་ཁ་ལུ་སྤོ་བཤུད་འབད་ནུག སྤྱི་ལོ་ ༡༩༨༤ ལོ་ལུ་ མི་དབང་རྒྱལ་ཡུམ་ཨ་ཞེ་མཆོག་གིས་སྐྱབས་འཛིན་མཛད་དེ་ ཞིང་གཤེགས་སྐྱིད་སྡུག་བློན་པོའམ་ ནང་སྲིད་བློན་པོ་ གཏམ་ཞིང་རྒྱ་གར་མཆོག་གིས་འགོ་འདྲེན་མཛད་དེ་ ད་ལྟོ་མཐོང་ནི་ཡོད་པའི་ རང་ལུགས་ལྷ་ཁང་གི་བཀོད་རིས་དང་ལྡན་པའི་ དུས་གཏན་ཇག་གི་དཔེ་མཛོད་ཁང་ཐོག་ཚད་བཞི་དང་ལྡན་མི་འདི་ འདི་ཕྱི་ནང་མེད་པར་ ལེགས་ཤོམ་འབད་བསྒྲུབས་གནང་སྟེ་  ལྕང་སྒང་ཁ་ལས་འདི་ཁ་ལུ་ སྤོ་བཤུད་འབད་ནུག།
 
-ད་ལྟོ་ ང་བཅས་འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ནང་ལུ་ ག་ཅི་རང་བཞུགས་ཏེ་ཡོདཔ་སྨོ་ཟེར་བ་ཅིན་ སྟེང་ཐོག་ལུ་ འབྲུག་པ་བཀའ་བརྒྱུད་ཀྱི་བླ་ཆེན་ཚུག་གིས་མཛད་པའི་ ཕྱག་དཔེ་ཚུ་དང་ སྡེ་དགེ་དང་ཨུར་དགའ། དེ་ལས་དར་ཐང་ལ་སོགས་པའི་ བཀའ་བསྟན་ཆ་ཚང་བཞུགས་ཏེ་ཡོདཔ་ཨིན། ཐོག་གཉིས་པའི་ནང་ལུ་ རྙིང་མའི་བླ་ཆེན་སོགས་ཀྱིས་མཛད་པའི་ རྙིང་མ་བརྒྱུད་འབུམ་གྱིས་གཙོས་པའི་ གཞུང་ཆེན་སོགས་དང་གཞན་ཡང་ གསུང་འབུམ་གྱི་རིགས་ཚུ་བཞུགས་ཏེ་ཡོདཔ་ཨིན། ཐོག་གསུམ་པའི་ནང་ལུ་ བོན་པོ་དང་ དགེ་ལུགས། ཞྭ་ལུ་དང་ས་སྐྱ། ཇོ་ནང་དང་བོ་གདོང་གི་བླ་ཆེན་སོགས་ཀྱིས་མཛད་པའི་ གཞུང་སོགས་དང་ལྷོའི་གཏེར་ལུགས་དང་ དེ་ལས་རྒྱལ་བ་ཀརྨ་པ་སྐུ་ཕྲེང་ ༡༦ པ་གིས་ཞལ་འདེབས་སུ་ཕུལ་བའི་ སྡེ་དགེ་བཀའ་འགྱུར་ཆ་ཚང་གཅིག་བཞུགས་ཡོདཔ་ཨིན། དེ་ལས་ཐོག་ཚད་དང་པའི་ནང་ལུ་ དབྱིན་སྐད་དང་འབྲེལ་བའི་ དཔེ་དེབ་ཀྱི་རིགས་དང་ མཻཀལ་ཧཝ་ལེ་ (Michel Hawley) གི་སྡེ་ཚན་ཚུ་གིས་བསྡུ་བསྒྲིགས་འབད་ཡོད་པའི་ པར་དེབ་འཛམ་གླིང་ནང་སྦོམ་ཤོས་གཅིག་ཨིན་མི་དང་ སྤུ་ན་ཁའི་རྫོང་གི་བཟོ་བཀོད་གཅིག་ཡང་ འགྲེམ་སྟོན་གྱི་ཚུལ་དུ་བཞག་སྟེ་ཡོདཔ་ཨིན།།
+ད་ལྟོ་ ང་བཅས་འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་ནང་ལུ་ ག་ཅི་རང་བཞུགས་ཏེ་ཡོདཔ་སྨོ་ཟེར་བ་ཅིན་ སྟེང་ཐོག་ལུ་ [[འབྲུག་པ་བཀའ་བརྒྱུད]]་ཀྱི་བླ་ཆེན་ཚུག་གིས་མཛད་པའི་ ཕྱག་དཔེ་ཚུ་དང་ སྡེ་དགེ་དང་ཨུར་དགའ། དེ་ལས་དར་ཐང་ལ་སོགས་པའི་ བཀའ་བསྟན་ཆ་ཚང་བཞུགས་ཏེ་ཡོདཔ་ཨིན། ཐོག་གཉིས་པའི་ནང་ལུ་ རྙིང་མའི་བླ་ཆེན་སོགས་ཀྱིས་མཛད་པའི་ རྙིང་མ་བརྒྱུད་འབུམ་གྱིས་གཙོས་པའི་ གཞུང་ཆེན་སོགས་དང་གཞན་ཡང་ གསུང་འབུམ་གྱི་རིགས་ཚུ་བཞུགས་ཏེ་ཡོདཔ་ཨིན། ཐོག་གསུམ་པའི་ནང་ལུ་ བོན་པོ་དང་ དགེ་ལུགས། ཞྭ་ལུ་དང་ས་སྐྱ། ཇོ་ནང་དང་བོ་གདོང་གི་བླ་ཆེན་སོགས་ཀྱིས་མཛད་པའི་ གཞུང་སོགས་དང་ལྷོའི་གཏེར་ལུགས་དང་ དེ་ལས་རྒྱལ་བ་ཀརྨ་པ་སྐུ་ཕྲེང་ ༡༦ པ་གིས་ཞལ་འདེབས་སུ་ཕུལ་བའི་ སྡེ་དགེ་བཀའ་འགྱུར་ཆ་ཚང་གཅིག་བཞུགས་ཡོདཔ་ཨིན། དེ་ལས་ཐོག་ཚད་དང་པའི་ནང་ལུ་ དབྱིན་སྐད་དང་འབྲེལ་བའི་ དཔེ་དེབ་ཀྱི་རིགས་དང་ མཻཀལ་ཧཝ་ལེ་ (Michel Hawley) གི་སྡེ་ཚན་ཚུ་གིས་བསྡུ་བསྒྲིགས་འབད་ཡོད་པའི་ པར་དེབ་འཛམ་གླིང་ནང་སྦོམ་ཤོས་གཅིག་ཨིན་མི་དང་ སྤུ་ན་ཁའི་རྫོང་གི་བཟོ་བཀོད་གཅིག་ཡང་ འགྲེམ་སྟོན་གྱི་ཚུལ་དུ་བཞག་སྟེ་ཡོདཔ་ཨིན།།
 
 ང་བཅས་རའི་མི་དབང་འབྲུག་རྒྱལ་བཞི་པའི་ཐུགས་རིག་མཁས་པའི་བཀྲིན་ལས་དང་ མི་དབང་རྒྱལ་ཡུམ་ཨ་ཞེ་མཆོག་གི་ ཐུགས་སྨོན་ལས་བརྟེན་ འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་འདི་ ས་གནས་འདི་ཁར་སྤོ་བཤུད་འབད་ཞིནམ་ལས་ཚུར་ དཔེ་མཛོད་ཀྱི་མཐུན་རྐྱེན་ཚུ་ གོང་འཕེལ་གནམ་མེད་ས་མེད་འགྱོ་སྟེ་ཡོདཔ་ཨིན།། ད་ལྟོ་དཔེ་མཛོད་སྒྲིང་ཁྱིམ་གཙོ་བོའི་གཡས་ཁ་ལུ་ཡོད་པའི་ ཡིག་རྙིང་གཉེར་འཇོང་ཁང་ངམ་ གཏན་མཛོད་ཁང་འདི་ སྤྱི་ལོ་ ༢༠༠༠ ལོ་ལུ་ ཌེན་མརྐ་རྒྱལ་གཞུང་གི་མ་དངུལ་གྱི་རྒྱབ་སྐྱོར་མཛད་ཐོག་ལས་ རྒྱལ་ཡོངས་ནང་ དཀོན་དྲགས་ཅན་གྱི་རྒྱལ་བའི་གསུང་རབ་ཚུ་ ཉེན་སྲུང་གྱི་དོན་ལུ་དང་ མ་འོངས་རྒྱུན་སྐྱོངས་ཀྱི་དོན་ལུ་དམིགས་ཏེ་ སྤྱི་ལོ་ ༢༠༠༤ ལུ་ བསྒྲུབས་ཏེ་ཡོད་པའི་ སྒྲིང་ཁྱིམ་འདི་ནང་ལུ་མེ་རྐྱེན་གྱི་ཉེན་བརྡ་དང་ བསིལ་དྲོད་ཚན་མཉམ་བཟོ་ནིའི་ དེང་སང་གི་འཕྲུལ་ཆའི་མཐུན་རྐྱེན་ཚུ་ གཞི་བཙུགས་འབད་དེ་ཡོདཔ་ཨིན། དེ་ལས་དཔེ་མཛོད་ཀྱི་གཡོན་ཁ་ཐུག་ལུ་ བདག་སྐྱོང་གི་སྒྲིང་ཁྱིམ་གསརཔ་འདི་ སྤྱི་ལོ་ ༢༠༠༥ ལོ་ལུ་ རྒྱ་གར་གཞུང་གིས་མ་དངུལ་གྱི་གྲོགས་ གནང་ཐོག་ལས་ལས་ སྤྱི་ལོ་ ༢༠༠༧ ལོ་མཇུག་བསྡུ་ཁམ་ལུ་ བསྒྲུབས་ཚར་སྟེ་ཡོདཔ་ཨིན།།
 
