*Empty MediaWiki Message*

--- a/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
+++ b/འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད.mw
@@ -2,7 +2,7 @@
 
 <span style="font-size: larger;">འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད</span> (National Library of Bhutan)
 
-འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་དང་ཡིག་རྙིང་གཉེར་འཇོག་ཁང་འདི་ བཀྲིས་ཆོས་རྫོང་དང་ ཀ་ཝང་གྱང་ས་ལུ་ཡོད་པའི་ བཟོ་རིག་བཅུ་གསུམ་སྤེལ་ཁང་གཉིས་ཀྱི་སྦུག་ལུ་ ག་ནི་བ་གཟི་བརྗིད་ཆེ་ཏོག་ཏོ་སྦེ་ ཕྱི་ཁའི་བཟོ་དབྱིབས་ལྷ་ཁང་གི་བཟོ་རྣམ་དང་ ནང་ན་ལུ་རྒྱལ་བའི་གསུང་རབ་ཆེན་མོ་དང་ འབྲུག་པའི་སྔར་སྲོལ་རིག་གཞུང་བཟང་པོའི་ ཕྱག་དཔེ་དང་དཔེ་དེབ་ཚུ་གི་ གང་སྟེ་ཡོདཔ་ཨིན།།
+འབྲུག་རྒྱལ་ཡོངས་དཔེ་མཛོད་དང་ཡིག་རྙིང་གཉེར་འཇོག་ཁང་འདི་ [[བཀྲིས་ཆོས་རྫོང]]་དང་ ཀ་ཝང་གྱང་ས་ལུ་ཡོད་པའི་ བཟོ་རིག་བཅུ་གསུམ་སྤེལ་ཁང་གཉིས་ཀྱི་སྦུག་ལུ་ ག་ནི་བ་གཟི་བརྗིད་ཆེ་ཏོག་ཏོ་སྦེ་ ཕྱི་ཁའི་བཟོ་དབྱིབས་ལྷ་ཁང་གི་བཟོ་རྣམ་དང་ ནང་ན་ལུ་རྒྱལ་བའི་གསུང་རབ་ཆེན་མོ་དང་ འབྲུག་པའི་སྔར་སྲོལ་རིག་གཞུང་བཟང་པོའི་ ཕྱག་དཔེ་དང་དཔེ་དེབ་ཚུ་གི་ གང་སྟེ་ཡོདཔ་ཨིན།།
 
 རྒྱལ་ཡོངས་དཔེ་མཛོད་འདི་ གཞི་བཙུགས་འབད་མི་དང་ ས་གནས་འདི་ཁར་སྤོ་བཤུད་མ་འབད་བའི་ཧེ་མ་ ག་སྟེ་ལུ་འབད་གཞི་བཙུགས་འབད་འབདཝ་ཨིན་ན? ཟེར་བའི་ཐུགས་ཀྱི་དོགས་པ་ བསལ་ཐབས་ལུ་ དེའི་ལོ་རྒྱུས་དུམ་གྲ་ཅིག་ཞུ་བ་ཅིན་ འདི་ཡང་ སྤྱི་ལོ་ ༡༩༦༧ ལོ་ལུ་ མི་དབང་རྒྱལ་ཡུམ་ཨ་ཞེ་ སྐལ་བཟང་ཆོས་སྒྲོན་དབང་ཕྱུག་མཆོག་གིས་ སྤྱིར་རྒྱལ་བའི་གསུང་རབ་ཚུ་དང་ བྱེ་བྲག་ཏུ་ དཔལ་ལྡན་འབྲུག་པའི་སྔོན་བྱོན་རྒྱལ་བ་གོང་མ་ སྤྲུལ་པའི་བླམ་ཚུ་དང་ མཁས་པ་དགེ་བཤེས་ཚུ་གིས་ བརྩམས་བཞག་མི་སྔར་སྲོལ་རིག་གཞུང་བཟང་པོ་ཚུ་ འཕྲལ་ཕུག་ཡུན་བརྟན་བཞག་འཐབ་ལུ་དམིགས་ཏེ་ མི་ཉམས་གོང་འཕེལ་དང་ ཉམས་པ་གསོར་ཆུད་མཛད་དེ་ བཀའ་བསྟན་གྱིས་གཙོས་པའི་རིག་གཞུང་གི་ཕྱག་དཔེ་ དུམ་གྲ་ཅིག་མཁོ་བསྒྲུབས་མཛད་ཐོག་ལས་ ཐིམ་ཕུག་བཀྲིས་ཆོས་རྫོང་གི་དབུ་རྩེའི་བར་ཐོག་ལུ་ གཞི་བཙུགས་མཛད་གནང་ནུག།
 
