*Empty MediaWiki Message*

--- a/བཀྲ་ཤིས་ཆོས་རྫོང.mw
+++ b/བཀྲ་ཤིས་ཆོས་རྫོང.mw
@@ -1,2 +1,5 @@
+
+[[Image:Tashichoedzong-Bhutan-2001.JPG|right|thumb|300px|View of Tashichoedzong, Thimphu]]
 བཀྲ་ཤས་ཆོས་རྫོང
+
 [[en:Tashichoedzong]]
