*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -32,7 +32,7 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 <!---------------------------------------------->
 | [[Image:Nuvola apps edu languages.png|40px|center]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''[[རྫོང་ཁག་]]'''<br/>
-[[ཀྲོང་གསར་རྫོང་ཁག་]]&nbsp;- [[གཞལམ་སྒང་རྫོང་ཁག་]]&nbsp;- [[གཡང་རྩེ་རྫོང་ཁག་]]&nbsp;- [[གསར་སྤང་རྫོང་ཁག་]]&nbsp;- [[ཆུ་ཁ་རྫོང་ཁག་]]&nbsp;- [[ཐིམ་ཕུ་རྫོང་ཁག་]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག་]]&nbsp;- [[དར་དཀར་ན་རྫོང་ཁག་]]&nbsp;- [[པདྨ་དགའ་ཚལ་རྫོང་ཁག་]]&nbsp;- [[བཀྲིས་སྒང་རྫོང་ཁག་]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག་]]&nbsp;- [[བསམ་རྩེ་རྫོང་ཁག་]]&nbsp;- [[བུམ་ཐང་རྫོང་ཁག་]]&nbsp;- [[མགར་ས་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག་]]&nbsp;- [[རྩི་རང་རྫོང་ཁག་]]&nbsp;- [[ལྷུན་རྩེ་རྫོང་ཁག་]]&nbsp;- [[སྤ་རོ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག་]]&nbsp;-  [[ཧཱ་རྫོང་ཁག་]]&nbsp;- 
+[[ཀྲོང་གསར་རྫོང་ཁག]]&nbsp;- [[གཞལམ་སྒང་རྫོང་ཁག]]&nbsp;- [[གཡང་རྩེ་རྫོང་ཁག]]&nbsp;- [[གསར་སྤང་རྫོང་ཁག]]&nbsp;- [[ཆུ་ཁ་རྫོང་ཁག]]་&nbsp;- [[ཐིམ་ཕུ་རྫོང་ཁག]]&nbsp;- [[དབང་འདུས་ཕོ་བྲང་རྫོང་ཁག]]&nbsp;- [[དར་དཀར་ན་རྫོང་ཁག]]&nbsp;- [[པདྨ་དགའ་ཚལ་རྫོང་ཁག]]&nbsp;- [[བཀྲིས་སྒང་རྫོང་ཁག]]&nbsp;- [[བསམ་གྲུབ་ལྗོངས་མཁར་རྫོང་ཁག]]&nbsp;- [[བསམ་རྩེ་རྫོང་ཁག]]&nbsp;- [[བུམ་ཐང་ྫོང་ཁག]]&nbsp;- [[མགར་ས་རྫོང་ཁག]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག]]&nbsp;- [[མོང་སྒར་རྫོང་ཁག]]&nbsp;- [[རྩི་རང་རྫོང་ཁག]]&nbsp;- [[ལྷུན་རྩེ་རྫོང་ཁག་]]&nbsp;- [[སྤ་རོ་རྫོང་ཁག]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག]]&nbsp;- [[སྤུ་ན་ཁ་རྫོང་ཁག]]&nbsp;-  [[ཧཱ་རྫོང་ཁག]]&nbsp;- 
 
 <!---------------------------------------------->
 |-
@@ -54,7 +54,7 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 <!---------------------------------------------->
 | width="10%" | [[Image:Nuvola_apps_kalzium.png|40px|center]]
 | width="90%" style="font-size: 95%;" | '''[[ཨེ་ཤར་ཡ་]]'''<br/>
-[[ཇ་པཱན་]]&nbsp;- [[རྒྱ་མི་]]&nbsp;- [[སོག་པོ་]]&nbsp;- [[ཏའི་ཝཱན་]]&nbsp;- [[ཀམ་བོ་ཌི་ཡ་]]&nbsp;- [[མེ་མར་]]&nbsp;- [[ཐཱའི་ལེནཌ་]]&nbsp;- [[ལྷོ་ཀོ་རི་ཡ་]]&nbsp;- [[བྱང་ཀོ་རི་ཡ་]]&nbsp;- [[རྒྱ་གར་]]&nbsp;- [[ཤྲཱྀ་ལངཀ་]]&nbsp;- [[བལ་ཡུལ་]]&nbsp;- [[བངྒ་ལ་དེཤ་]]&nbsp;- [[མ་ལེ་ཤི་ཡ་]]&nbsp;- [[ཨཕ་ག་ནིསི་ཏཱན་]]&nbsp;- [[ཨི་རཱན་]]&nbsp;- [[ལེ་བཱ་ནཱོན་]]&nbsp;- [[ཨིཛ་རཱེལ་]]&nbsp;- [[ཀུ་ཝེཊ་]]&nbsp;- [[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]&nbsp;- [[ཨུཛ་བེ་ཀིསི་ཏཱན་]]&nbsp;- [[ཏ་ཇག་ཀིསི་ཏཱན་]]&nbsp;- [[བཧ་རེན་]]&nbsp;- [[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]&nbsp;- 
+[[ཇ་པཱན་]]&nbsp;- [[རྒྱ་མི]]&nbsp;- [[སོག་པོ]]&nbsp;- [[ཏའི་ཝཱན]]&nbsp;- [[ཀམ་བོ་ཌི་ཡ]]&nbsp;- [[མེ་མར]]&nbsp;- [[ཐཱའི་ལེནཌ་]]&nbsp;- [[ལྷོ་ཀོ་རི་ཡ་]]&nbsp;- [[བྱང་ཀོ་རི་ཡ་]]&nbsp;- [[རྒྱ་གར་]]&nbsp;- [[ཤྲཱྀ་ལངཀ་]]&nbsp;- [[བལ་ཡུལ་]]&nbsp;- [[བངྒ་ལ་དེཤ་]]&nbsp;- [[མ་ལེ་ཤི་ཡ་]]&nbsp;- [[ཨཕ་ག་ནིསི་ཏཱན་]]&nbsp;- [[ཨི་རཱན་]]&nbsp;- [[ལེ་བཱ་ནཱོན་]]&nbsp;- [[ཨིཛ་རཱེལ་]]&nbsp;- [[ཀུ་ཝེཊ་]]&nbsp;- [[ཡུ་ནའི་ཊེཊ་ཨ་རབ་ཨེ་མི་རེཊསི་]]&nbsp;- [[ཨུཛ་བེ་ཀིསི་ཏཱན་]]&nbsp;- [[ཏ་ཇག་ཀིསི་ཏཱན་]]&nbsp;- [[བཧ་རེན་]]&nbsp;- [[སའུ་དི་ཨེ་ར་སྦི་ཡ་]]&nbsp;- 
 <!---------------------------------------------->
 |- 
 <!---------------------------------------------->
