--- a/ཐཱའི་ལེནཌ་.mw
+++ b/ཐཱའི་ལེནཌ་.mw
@@ -1,4 +1,4 @@
-[[Image:LocationThailand.svg|right|thumb|ཐཱའི་ལེནཌ་]]
+[[Image:LocationThailand.svg|right|thumb|ཐཱའི་ལེནཌ]]
 [[Image:Flag of Thailand.svg|right|thumb]]
 '''ཐཱའི་ལེནཌ་'''
 
