*Empty MediaWiki Message*

--- a/ཇ་པཱན.mw
+++ b/ཇ་པཱན.mw
@@ -1,9 +1,9 @@
-[[Image:Mountfujijapan.jpg|right|thumb|ཇ་པཱན་]]
+[[Image:Mountfujijapan.jpg|right|thumb|ཇ་པཱན]]
 [[Image:Flag of Japan.svg|right|thumb]]
 '''ཇ་པཱན་'''
 
 ----
-*[[སོག་པོ་ ]]
+
 {{Asia}}
 
 [[af:Japan]]
