*Empty MediaWiki Message*

--- a/རྒྱ་ནག.mw
+++ b/རྒྱ་ནག.mw
@@ -1,8 +1,8 @@
-[[Image:China 100.78713E 35.63718N.jpg|right|thumb|རྒྱ་མི་]]
-'''རྒྱ་མི་'''
+[[Image:China 100.78713E 35.63718N.jpg|right|thumb|རྒྱ་ནག]]
+'''རྒྱ་ནག'''
 
 ----
-*[[ཇ་པཱན་ ]]
+
 
 {{Asia}}
 
