--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -42,7 +42,7 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 <!---------------------------------------------->
 |- 
 <!---------------------------------------------->
-| [[Image:Image:Dharma_Wheel.svg|40px|center]]
+| [Image:Dharma_Wheel.svg|40px|center]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''ཆོས'''<br/>
 [[Christianity]]&nbsp;- [[Buddhism]]&nbsp;- [[Judaism]]&nbsp;- [[Atheism]]&nbsp;- 
 <!---------------------------------------------->
