--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -43,8 +43,9 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 |- 
 <!---------------------------------------------->
 | [[Image:Dharma_Wheel.svg|40px|center]]
-| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''ཆོས'''<br/>
-[[Christianity]]&nbsp;- [[Buddhism]]&nbsp;- [[Judaism]]&nbsp;- [[Atheism]]&nbsp;- 
+| style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''ཆོས''' <!--Religion--><br/>
+[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]<!--Buddhism-->&nbsp;- [[བཀའ་བརྒྱུད་པ]]&nbsp;-[[འབྲུག་པ་བཀའ་བརྒྱུད|	འབྲུག་པ་བཀའ་བརྒྱུད་པ]][[སྔ་འགྱུར་རྙིང་མ་པ]]&nbsp;-<br> 
+[[Atheism]]&nbsp;- [[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[]]<!--Islam-->
 <!---------------------------------------------->
 |}
 | width="50%" valign="top" | 
