*Empty MediaWiki Message*

--- a/མ་ཤོག།.mw
+++ b/མ་ཤོག།.mw
@@ -44,8 +44,8 @@ You may need to download [http://www.babelstone.co.uk/Test/Tibetan.html Tibetan 
 <!---------------------------------------------->
 | [[Image:Dharma_Wheel.svg|40px|center]]
 | style="font-size: 95%; border-top: 1px dashed #AAAAAA;" | '''ཆོས''' <!--Religion--><br/>
-[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]<!--Buddhism-->&nbsp;- [[བཀའ་བརྒྱུད་པ]]&nbsp;-[[འབྲུག་པ་བཀའ་བརྒྱུད|	འབྲུག་པ་བཀའ་བརྒྱུད་པ]][[སྔ་འགྱུར་རྙིང་མ་པ]]&nbsp;-<br> 
-[[Atheism]]&nbsp;- [[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[]]<!--Islam-->
+[[སངས་རྒྱས་ཀྱི་བསྟན་པ]]།<!--Buddhism-->&nbsp;· [[བཀའ་བརྒྱུད་པ]]&nbsp;·་[[འབྲུག་པ་བཀའ་བརྒྱུད|	འབྲུག་པ་བཀའ་བརྒྱུད་པ]]&nbsp;·་[[སྔ་འགྱུར་རྙིང་མ་པ]]&nbsp;· [[ས་སྐྱ་བ]]  <br> 
+[[ཧིན་དུ་ཆོས་ལུགས]]&nbsp;· [[ཡེ་ཤུའི་ཆོས་ལུགས]]<!--Christianity-->&nbsp;- [[ཁ་ཆེའི་ཆོས་ལུགས]]<!--Islam-->&nbsp;· [[ཆད་ལྟའི་རིང་ལུགས]]<!--Atheism-->&nbsp;· 
 <!---------------------------------------------->
 |}
 | width="50%" valign="top" | 
